Time: 25 ms (99.27%) | Memory: 121 MB (67.83%) - LeetSync