@@ -4,7 +4,7 @@ class Solution {
         int count = 0;
         List<List<Integer>> ans = new ArrayList<>();
         PriorityQueue<int[]> pq = new PriorityQueue<>(
-                (a, b) -> Integer.compare(a[0],b[0])
+                (a, b) -> a[0]-b[0]
         );
         int temp = Math.min(k, nums1.length);
         for (int i = 0; i < temp; i++) {
@@ -14,7 +14,7 @@ class Solution {
         while (count < k && !pq.isEmpty()) {
             int[] polled = pq.poll();
             int i = polled[1], j = polled[2];
-            ans.add(Arrays.asList(nums1[i], nums2[j]));
+            ans.add(List.of(nums1[i], nums2[j]));
             count++;
             if (j + 1 < nums2.length) {
                 int sum=nums1[i] + nums2[j+1];
